plugins/binding/csharp/source/TellusimCSMath.cs

		
		public Vector2i abs() { Vector2i ret = new Vector2i(); tsVector2i_abs(ref ret, in this); return ret; }
		
		public static Vector2i min(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_min(ref ret, in v0, in v1); return ret; }
		public static Vector2i max(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_max(ref ret, in v0, in v1); return ret; }
		
		public Vector2i clamp(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_clamp(ref ret, in this, in v0, in v1); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1})", x, y); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_abs(ref Vector2i ret, in Vector2i v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_neg(ref Vector2i ret, in Vector2i v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_mul1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_div1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_add1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_sub1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_and1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_or1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_xor1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_shl1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_shr1(ref Vector2i ret, in Vector2i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_mul(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_div(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_add(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_sub(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_and(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_or(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_xor(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_min(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_max(ref Vector2i ret, in Vector2i v0, in Vector2i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2i_clamp(ref Vector2i ret, in Vector2i v, in Vector2i v0, in Vector2i v1);
		
		public static readonly Vector2i zero = new Vector2i(0);
		public static readonly Vector2i oneX = new Vector2i(1, 0);
		public static readonly Vector2i oneY = new Vector2i(0, 1);
		public static readonly Vector2i one = new Vector2i(1);
		
		public int x, y;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Vector2u {
		
		public Vector2u(uint v) { x = v; y = v; }
		public Vector2u(uint x, uint y) { this.x = x; this.y = y; }
		public Vector2u(in Vector2u v) { x = v.x; y = v.y; }
		public Vector2u(in Vector3u v) { x = v.x; y = v.y; }
		public Vector2u(in Vector4u v) { x = v.x; y = v.y; }
		public Vector2u(in Vector2i v) { x = (uint)v.x; y = (uint)v.y; }
		public Vector2u(in Vector2f v) { x = (uint)v.x; y = (uint)v.y; }
		public Vector2u(in Vector2d v) { x = (uint)v.x; y = (uint)v.y; }
		public Vector2u(in uint[] v) { x = v[0]; y = v[1]; }
		
		public static Vector2u operator*(in Vector2u v0, uint v1) { Vector2u ret = new Vector2u(); tsVector2u_mul1(ref ret, in v0, v1); return ret; }
		public static Vector2u operator/(in Vector2u v0, uint v1) { Vector2u ret = new Vector2u(); tsVector2u_div1(ref ret, in v0, v1); return ret; }
		public static Vector2u operator+(in Vector2u v0, uint v1) { Vector2u ret = new Vector2u(); tsVector2u_add1(ref ret, in v0, v1); return ret; }
		public static Vector2u operator-(in Vector2u v0, uint v1) { Vector2u ret = new Vector2u(); tsVector2u_sub1(ref ret, in v0, v1); return ret; }
		public static Vector2u operator&(in Vector2u v0, uint v1) { Vector2u ret = new Vector2u(); tsVector2u_and1(ref ret, in v0, v1); return ret; }
		public static Vector2u operator|(in Vector2u v0, uint v1) { Vector2u ret = new Vector2u(); tsVector2u_or1(ref ret, in v0, v1); return ret; }
		public static Vector2u operator^(in Vector2u v0, uint v1) { Vector2u ret = new Vector2u(); tsVector2u_xor1(ref ret, in v0, v1); return ret; }
		public static Vector2u operator<<(in Vector2u v0, int v1) { Vector2u ret = new Vector2u(); tsVector2u_shl1(ref ret, in v0, (uint)v1); return ret; }
		public static Vector2u operator>>(in Vector2u v0, int v1) { Vector2u ret = new Vector2u(); tsVector2u_shr1(ref ret, in v0, (uint)v1); return ret; }
		
		public static Vector2u operator*(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_mul(ref ret, in v0, in v1); return ret; }
		public static Vector2u operator/(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_div(ref ret, in v0, in v1); return ret; }
		public static Vector2u operator+(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_add(ref ret, in v0, in v1); return ret; }
		public static Vector2u operator-(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_sub(ref ret, in v0, in v1); return ret; }
		public static Vector2u operator&(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_and(ref ret, in v0, in v1); return ret; }
		public static Vector2u operator|(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_or(ref ret, in v0, in v1); return ret; }
		public static Vector2u operator^(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_xor(ref ret, in v0, in v1); return ret; }
		
		public static Vector2u min(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_min(ref ret, in v0, in v1); return ret; }
		public static Vector2u max(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_max(ref ret, in v0, in v1); return ret; }
		
		public Vector2u clamp(in Vector2u v0, in Vector2u v1) { Vector2u ret = new Vector2u(); tsVector2u_clamp(ref ret, in this, in v0, in v1); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1})", x, y); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_mul1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_div1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_add1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_sub1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_and1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_or1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_xor1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_shl1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_shr1(ref Vector2u ret, in Vector2u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_mul(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_div(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_add(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_sub(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_and(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_or(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_xor(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_min(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_max(ref Vector2u ret, in Vector2u v0, in Vector2u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2u_clamp(ref Vector2u ret, in Vector2u v, in Vector2u v0, in Vector2u v1);
		
		public static readonly Vector2u zero = new Vector2u(0);
		public static readonly Vector2u oneX = new Vector2u(1, 0);
		public static readonly Vector2u oneY = new Vector2u(0, 1);
		public static readonly Vector2u one = new Vector2u(1);
		
		public uint x, y;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Vector2f {
		
		public Vector2f(float v) { x = v; y = v; }
		public Vector2f(float x, float y) { this.x = x; this.y = y; }
		public Vector2f(in Vector2f v) { x = v.x; y = v.y; }
		public Vector2f(in Vector3f v) { x = v.x; y = v.y; }
		public Vector2f(in Vector4f v) { x = v.x; y = v.y; }
		public Vector2f(in Vector2i v) { x = (float)v.x; y = (float)v.y; }
		public Vector2f(in Vector2u v) { x = (float)v.x; y = (float)v.y; }
		public Vector2f(in Vector2d v) { x = (float)v.x; y = (float)v.y; }
		public Vector2f(in float[] v) { x = v[0]; y = v[1]; }
		
		public static Vector2f operator-(in Vector2f v) { Vector2f ret = new Vector2f(); tsVector2f_neg(ref ret, in v); return ret; }
		
		public static Vector2f operator*(in Vector2f v0, float v1) { Vector2f ret = new Vector2f(); tsVector2f_mul1(ref ret, in v0, v1); return ret; }
		public static Vector2f operator/(in Vector2f v0, float v1) { Vector2f ret = new Vector2f(); tsVector2f_div1(ref ret, in v0, v1); return ret; }
		public static Vector2f operator+(in Vector2f v0, float v1) { Vector2f ret = new Vector2f(); tsVector2f_add1(ref ret, in v0, v1); return ret; }
		public static Vector2f operator-(in Vector2f v0, float v1) { Vector2f ret = new Vector2f(); tsVector2f_sub1(ref ret, in v0, v1); return ret; }
		
		public static Vector2f operator*(in Vector2f v0, in Vector2f v1) { Vector2f ret = new Vector2f(); tsVector2f_mul(ref ret, in v0, in v1); return ret; }
		public static Vector2f operator/(in Vector2f v0, in Vector2f v1) { Vector2f ret = new Vector2f(); tsVector2f_div(ref ret, in v0, in v1); return ret; }
		public static Vector2f operator+(in Vector2f v0, in Vector2f v1) { Vector2f ret = new Vector2f(); tsVector2f_add(ref ret, in v0, in v1); return ret; }
		public static Vector2f operator-(in Vector2f v0, in Vector2f v1) { Vector2f ret = new Vector2f(); tsVector2f_sub(ref ret, in v0, in v1); return ret; }
		
		public Vector2f abs() { Vector2f ret = new Vector2f(); tsVector2f_abs(ref ret, in this); return ret; }
		
		public static Vector2f min(in Vector2f v0, in Vector2f v1) { Vector2f ret = new Vector2f(); tsVector2f_min(ref ret, in v0, in v1); return ret; }
		public static Vector2f max(in Vector2f v0, in Vector2f v1) { Vector2f ret = new Vector2f(); tsVector2f_max(ref ret, in v0, in v1); return ret; }
